--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -5,6 +5,87 @@
   position: relative;
 }
 
+.project {
+  width: 20vw;
+  height: 35vh;
+  border-radius: 5%;
+  background-image: linear-gradient(to top, #d5d4d0 0%, #d5d4d0 1%, #eeeeec 31%, #efeeec 75%, #e9e9e7 100%);
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  overflow: hidden;
+  -webkit-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.12), 0 2px 4px rgba(0, 0, 0, 0.24);
+  -moz-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.12), 0 2px 4px rgba(0, 0, 0, 0.24);
+  -ms-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.12), 0 2px 4px rgba(0, 0, 0, 0.24);
+  -o-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.12), 0 2px 4px rgba(0, 0, 0, 0.24);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.12), 0 2px 4px rgba(0, 0, 0, 0.24);
+  transition: all 0.5s ease;
+  position: relative;
+}
+
+.project:hover {
+  -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  -moz-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  -ms-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  -o-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+}
+
+.project:hover .project-resources {
+  position: relative;
+  transform: translateX(100%);
+  transition: all ease 0.1s;
+}
+
+.project-image {
+  background: url("../../images/heroes.jpg");
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+}
+
+.project-description {
+  text-align: center;
+  display: grid;
+  grid-template-rows: 1fr;
+  color: black;
+  height: 100%;
+  width: 100%;
+  position: relative;
+}
+
+.project-title {
+  text-transform: uppercase;
+  width: 90%;
+  margin: 3% auto;
+  letter-spacing: 2px;
+  font-weight: bold;
+}
+
+.project-info {
+  font-size: 10pt;
+}
+
+.project-resources {
+  font-size: 10pt;
+  list-style: none;
+  transition: all 0.2s ease;
+}
+
+.project-show {
+  width: 70%;
+  margin: 0 auto !important;
+  position: absolute !important;
+  left: 50%;
+  transform: translate(-50%);
+  transition: all 0.2s ease;
+  bottom: -20%;
+}
+
+.project:hover .project-show {
+  transition: all 0.2s ease;
+  bottom: 20%;
+}
+
 .close-btn {
   height: 5vh;
   width: 5vw;
