--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -3,6 +3,8 @@
   background: #333333;
   z-index: 2;
   position: relative;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
 .project {
@@ -20,6 +22,9 @@
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.12), 0 2px 4px rgba(0, 0, 0, 0.24);
   transition: all 0.5s ease;
   position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .project:hover {
@@ -46,7 +51,6 @@
 .project-description {
   text-align: center;
   display: grid;
-  grid-template-rows: 1fr;
   color: black;
   height: 100%;
   width: 100%;
@@ -59,9 +63,11 @@
   margin: 3% auto;
   letter-spacing: 2px;
   font-weight: bold;
+  align-self: center;
 }
 
 .project-info {
+  align-self: center;
   font-size: 10pt;
 }
 
@@ -69,6 +75,7 @@
   font-size: 10pt;
   list-style: none;
   transition: all 0.2s ease;
+  align-self: center;
 }
 
 .project-show {
